# globe_runtime

./: .gitignore  .gitmodules  Cargo.toml  README.md  ai.js  build.rs  global.d.ts  index.js  melos.yaml  neon.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pubspec.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  runtime.yaml  test.yaml
examples/: main.rs
examples/basic_example/: README.md  pubspec.yaml
examples/basic_example/lib/: basic_example.dart  basic_example.js
examples/full_example/: README.md  package-lock.json  package.json  pubspec.yaml  tsconfig.json
examples/full_example/lib/: full_example.dart  full_example_source.dart
examples/js_to_dart_docs/: README.md  package.json  pubspec.yaml
examples/mjml/: package.json  pubspec.yaml  tsup.config.ts
examples/mjml/lib/: mjml_bridge.ts  (+2 more)
examples/pretty_node/: README.md  package-lock.json  package.json  pubspec.yaml  tsconfig.json  tsup.config.ts
features/: neon.dart
globe-ai-sdk/: pubspec.yaml
globe-ai-sdk/lib/: globe_ai_sdk.dart
lib/: globe_runtime.dart
lib/src/: runtime.dart  runtime_impl.dart
protos/: dart_runtime_data.proto  dart_runtime_entry.proto
src/: async_runtime.rs  dart_api.rs  dart_api_dl.rs  dart_runtime.js  dart_runtime.rs  dart_runtime.ts  dart_runtime_data.ts  dart_runtime_entry.ts  js_resolver.rs  js_runtime.js  js_runtime.rs  js_runtime.ts  lib.rs  polyfill_console.rs  polyfill_fetch.rs  utils.rs
src/polyfill/: console.rs  dart.rs  fetch.rs  mod.rs  process.rs  require.rs
src/protos/: runtime_data_pb.js
(+13 files in other folders)
