[package]
name = "dart_v8_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "dartv8"
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.169"
deno_runtime = { version = "0.196.0", features = ["transpile"] }
tokio = "1.43.0"
sys_traits = "=0.1.7"
deno_core = "^0.333.0"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"
