[package]
name = "dart_v8_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "dartv8"
crate-type = ["cdylib"]

[dependencies]
v8 = "130.0.7"
deno_core = "0.333.0"
deno_error = "=0.5.5"
deno_runtime = { version = "0.196.0", features = ["transpile"] }
libc = "0.2.169"
tokio = "1.43.0"
thiserror = "2.0.3"
serde_json = "1.0.85"
sys_traits = "=0.1.7"
node_resolver = "0.26.0"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"
